--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,15 @@
 		<link rel="stylesheet" href="./design/leaflet.css" />
 		<link rel="stylesheet" href="./design/index.css" />
 		<script src="./design/leaflet.js"></script>
+		<script src="./design/leaflet-image.js"></script>
 	</head>
 	<body>
 		<header>
 			<button onclick="load('Hockenheim');">Hockenheim</button>
+			<button onclick="save();">Save</button>
 		</header>
+		<aside>
+		</aside>
 		<div id="map"></div>
 		<script src="./design/index.js"></script>
 	</body>
