:book: MOBAC guide and README

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<header>
+			<button onclick="load('Berlin');">Berlin</button>
 			<button onclick="load('Hockenheim');">Hockenheim</button>
 			<button onclick="save();">Save</button>
 		</header>
